--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
           type="text"
           id="movie-input"
           class="form-control"
-          placeholder="Type a movie title..."
+          placeholder="Type a movie title... eg.John Wick, 3 Idiots"
         />
       </div>
       <div id="suggestion-box"></div>
