--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Bootstrap Home Button -->
-    <a href="http://localhost:5000" class="btn btn-secondary mb-4">
+    <a href="https://fi-lega.onrender.com" class="btn btn-secondary mb-4">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M11.354 3.646a.5.5 0 0 1 0 .708L6.707 8l4.647 4.646a.5.5 0 0 1-.708.708l-5-5a.5.5 0 0 1 0-.708l5-5a.5.5 0 0 1 .708 0z"/>
       </svg>
