--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -8,7 +8,7 @@
     />
     <style>
       body {
-        background-color: #f8f9fa;
+       background: linear-gradient(184deg, rgba(8,39,32,1) 29%, rgba(25,23,64,1) 53%);
       }
       .container {
         padding-top: 40px;
