--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -39,6 +39,9 @@
       #theName {
         color: rgb(115, 115, 231)
       }
+      h3 {
+       color: white;
+      }
     </style>
   </head>
   <body>
