--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     />
     <style>
       body {
-        background-color: #f8f9fa;
+        background: linear-gradient(to right, #f8f9fa, #e9ecef);
         padding-top: 40px;
         text-align: center;
       }
@@ -26,29 +26,46 @@
       h1 {
         font-size: 32px;
         margin-bottom: 20px;
+        font-family: ‘Roboto Slab’, serif;
       }
 
       p {
         margin-bottom: 30px;
         line-height: 1.6;
+        font-family: ‘Roboto’, sans-serif;
       }
 
       input {
         width: 100%;
         height: 40px;
         padding: 5px 10px;
-        font-size: 16px;
+        font-size: 18px;
         border-radius: 5px;
         border: 1px solid #ced4da;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        color: #adb5bd;
       }
 
       #suggestion-box {
         margin-top: 20px;
         text-align: left;
+        max-height: 150px;
+        overflow-y: auto;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s;
       }
+
+      #suggestion-box a {
+        color: #343a40;
+        font-size: 14px;
+        opacity: 0.8;
+      }
+
       #suggestion-box a:hover {
-        background-color: #e9ecef;
+        background-color: #b6c1cb;
+        opacity: 0.3;
       }
+
       #footer {
         margin-top: 40px;
       }
@@ -75,12 +92,9 @@
         learning
       </h1>
       <p>
-        Our recommendation engine is trained on a dataset of 7,120 movies from
-        the years 2000 to 2023, featuring the top 300 movies from each year
-        based on popularity. <br />Filega can suggest the top 10 movies based on
-        your preferences. Simply enter a movie title, and our algorithm will
-        provide you with a list of recommended movies that match your interests.
-        Feel free to explore the site and discover new movies to watch!
+        Filega is a movie recommendation site powered by machine learning. It
+        can suggest the top 10 movies that match your interests based on a movie
+        title you enter. Explore and enjoy!
       </p>
       <div class="mb-3">
         <input
@@ -126,7 +140,7 @@
           suggestionBox.innerHTML = "";
           suggestions.forEach((suggestion) => {
             const suggestionElement = document.createElement("a");
-            suggestionElement.href = `https://fi-lega.onrender.com/recommend?name=${suggestion}`;
+            suggestionElement.href = `https://www.fi-lega.onrender.com/recommend?name=${suggestion}`;
             suggestionElement.textContent = suggestion;
             suggestionElement.classList.add(
               "d-block",
