--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -8,93 +8,85 @@
     />
     <style>
       body {
-       background: linear-gradient(184deg, rgba(8,39,32,1) 29%, rgba(25,23,64,1) 53%);
+        background: linear-gradient(
+          184deg,
+          rgba(8, 39, 32, 1) 29%,
+          rgba(25, 23, 64, 1) 53%
+        );
       }
+
       .container {
         padding-top: 40px;
         padding-bottom: 40px;
       }
+
       .card {
         border-radius: 10px;
         border: none;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
       }
+
       .card-title {
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 10px;
       }
+
       .card-text {
         font-size: 16px;
         line-height: 1.5;
         color: #6c757d;
       }
-      /* Added styles for the carousel */
-      .carousel-item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 300px;
-      }
+
       #theName {
-        color: rgb(115, 115, 231)
+        color: rgb(115, 115, 231);
       }
+
       h3 {
-       color: white;
+        color: white;
       }
     </style>
   </head>
+
   <body>
     <div class="container">
-      <h3 class="text-center mb-4">Movie Recommendations for <span id="theName">{{movie_info.title}}</span></h3>
-      <div id="movieCarousel" class="carousel slide" data-bs-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          {% for i in range(recommended_movies|length) %}
-          <li data-bs-target="#movieCarousel" data-bs-slide-to="{{ i }}" {% if i == 0 %}class="active"{% endif %}></li>
-          {% endfor %}
-        </ol>
-
-        <!-- Slides -->
-        <div class="carousel-inner">
-          <div class="row">
-            {% for movie in recommended_movies %}
-            <div class="col-md-6 {% if loop.first %}active{% endif %}">
-              <div class="card mb-4">
-                <div class="card-body">
-                  <h5 class="card-title">{{ movie.title }}</h5>
-                  <p class="card-text">
-                    <strong>Genre:</strong> {{ movie.genre }}<br />
-                    <strong>Actors:</strong> {{ movie.actors | join(', ') }}<br />
-                    <strong>Director:</strong> {{ movie.directors }}
-                  </p>
-                </div>
-              </div>
+      <h3 class="text-center mb-4">
+        Movie Recommendations for <span id="theName">{{movie_info.title}}</span>
+      </h3>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        {% for movie in recommended_movies %}
+        <div class="col">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">{{ movie.title }}</h5>
+              <p class="card-text">
+                <strong>Genre:</strong> {{ movie.genre }}<br />
+                <strong>Actors:</strong> {{ movie.actors | join(', ') }}<br />
+                <strong>Director:</strong> {{ movie.directors }}
+              </p>
             </div>
-            {% endfor %}
           </div>
         </div>
-
-        <!-- Controls -->
-        <a class="carousel-control-prev" href="#movieCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#movieCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </a>
+        {% endfor %}
       </div>
     </div>
-
     <!-- Bootstrap Home Button -->
     <a href="https://fi-lega.onrender.com" class="btn btn-secondary mb-4">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M11.354 3.646a.5.5 0 0 1 0 .708L6.707 8l4.647 4.646a.5.5 0 0 1-.708.708l-5-5a.5.5 0 0 1 0-.708l5-5a.5.5 0 0 1 .708 0z"/>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-arrow-left"
+        viewBox="0 0 16 16"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M11.354 3.646a.5.5 0 0 1 0 .708L6.707 8l4.647 4.646a.5.5 0 0 1-.708.708l-5-5a.5.5 0 0 1 0-.708l5-5a.5.5 0 0 1 .708 0z"
+        />
       </svg>
       Home
     </a>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
