--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
           suggestionBox.innerHTML = "";
           suggestions.forEach((suggestion) => {
             const suggestionElement = document.createElement("a");
-            suggestionElement.href = `https://www.fi-lega.onrender.com/recommend?name=${suggestion}`;
+            suggestionElement.href = `https://fi-lega.onrender.com/recommend?name=${suggestion}`;
             suggestionElement.textContent = suggestion;
             suggestionElement.classList.add(
               "d-block",
