--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,14 @@
         color: #495057;
       }
 
+      #footer .developer {
+        font-weight: bold;
+      }
+
+      #footer .social-links {
+        margin-bottom: 10px;
+      }
+
       #footer .social-links a {
         margin: 0 10px;
         color: #495057;
@@ -113,18 +121,20 @@
       <div id="suggestion-box"></div>
     </div>
 
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/yaekob-demisse/" target="_blank"
-        ><i class="fab fa-linkedin"></i
-      ></a>
-      <a href="https://github.com/Jamescog" target="_blank"
-        ><i class="fab fa-github"></i
-      ></a>
-      <a href="https://t.me/Jamescog" target="_blank"
-        ><i class="fab fa-telegram"></i
-      ></a>
+    <div id="footer">
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/yaekob-demisse/" target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/Jamescog" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a href="https://t.me/JamescoG" target="_blank"
+          ><i class="fab fa-telegram"></i
+        ></a>
+      </div>
+      <p>Developed by <span class="developer">Yaekob Demisse</span></p>
     </div>
-
     <script
       src="https://kit.fontawesome.com/7ef9daaa9b.js"
       crossorigin="anonymous"
